--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <style>
      body{
-       background-image: url(https://cdn.discordapp.com/attachments/1454526378379579624/1454526892026630306/content.png?ex=6951693a&is=695017ba&hm=ddfdb820dd42dd69cc08d51c9577f54c4fb06a518d3ba79ef0a718431f685bfa&);
+       background-image: url("pic/background.png");
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -549,4 +549,5 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
   &copy; 2025 NEXO Group. All rights reserved.
 </footer>
 </body>
+
 </html>
