--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ background-image: url("pic/background.png");
     background-size: cover;
     background-position: center;
     }
+    html, body{
+        height: 100%;
+        margin: 0;
+    }
       h1{
         margin-top: 100px;
         color: white;
@@ -650,3 +654,4 @@ Coming Soon
 </body>
 
 </html>
+
