--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 <style>
     body{
-background-image: url("pic/background.png");
+background-image: url("background.png");
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -650,6 +650,7 @@ Coming Soon
 </body>
 
 </html>
+
 
 
 
