--- a/careers.html
+++ b/careers.html
@@ -13,7 +13,7 @@
     scroll-behavior: smooth;
   }
     body{
-background-image: url("pic/background.png");
+background-image: url("background.png");
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -891,3 +891,4 @@ footer{
 </body>
 
 </html>
+
