--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <style>
     body{
-background-image: url("pic/background.png");
+background-image: url("background.png");
              background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -416,3 +416,4 @@ footer{
 </body>
 
 </html>
+
