--- a/divisions.html
+++ b/divisions.html
@@ -10,7 +10,7 @@
 </head>
 <style>
      body{
-background-image: url("pic/background.png");
+background-image: url("background.png");
              background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -307,3 +307,4 @@ It’s made to help passionate creatives learn skills, build experience, and ear
 </body>
 
 </html>
+
