--- a/careers.html
+++ b/careers.html
@@ -15,7 +15,9 @@ background-image: url("background.png");
     background-size: cover;
     background-position: center;
     }
- 
+   html{
+    scroll-behavior: smooth;
+  }
       h1{
         margin-top: 100px;
         color: white;
@@ -888,6 +890,7 @@ footer{
 </body>
 
 </html>
+
 
 
 
