--- a/index.html
+++ b/index.html
@@ -416,6 +416,13 @@ footer{
     background: white;
   }
 }
+@media (max-width: 768px){
+  body{
+     background-size: contain;
+     background-position: top center;
+     background-color: black; /* fundal dacă rămân margini */
+  }
+}
 
  </style>
 </head>
@@ -651,6 +658,7 @@ Coming Soon
 </body>
 
 </html>
+
 
 
 
