--- a/contact.html
+++ b/contact.html
@@ -393,7 +393,7 @@ footer{
     <!-- From Uiverse.io by Smit-Prajapati --> 
 <br><br><br><br><br><br><br>
 <div class="form-container">
-  <form class="form" action="send.php" method="POST">
+  <form action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
 
     <span class="heading">Get in touch</span>
 
@@ -416,4 +416,5 @@ footer{
 </body>
 
 </html>
+
 
