--- a/careers.html
+++ b/careers.html
@@ -859,7 +859,7 @@ footer{
     <h1>Apply Now</h1>
     <br><br><br><br><br><br><br>
     <div class="form-container">
-  <form class="form" action="send.php" method="POST">
+  <form action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
 
     <span class="heading">Get in touch</span>
 
@@ -884,6 +884,7 @@ footer{
 </body>
 
 </html>
+
 
 
 
