--- a/index.html
+++ b/index.html
@@ -418,9 +418,8 @@ footer{
 }
 @media (max-width: 768px){
   body{
-     background-size: contain;
-     background-position: top center;
-     background-color: black; /* fundal dacă rămân margini */
+     background-size: cover;
+     background-position: center,
   }
 }
 
@@ -658,6 +657,7 @@ Coming Soon
 </body>
 
 </html>
+
 
 
 
