--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-.form-container .input {
+.container .input {
   color: #87a4b6;
   width: 100%;
   background-color: #002733;
@@ -104,11 +104,11 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-.form-container .input:focus {
+.container .input:focus {
   border-left: 5px solid #2E4F7A;
 }
 
-.form-container .textarea {
+.container .textarea {
   width: 100%;
   padding: 10px;
   border: none;
@@ -124,16 +124,16 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-.form-container .form .textarea:focus {
+.container .form .textarea:focus {
   border-left: 5px solid#2E4F7A;
   font-family: "Zen Dots", sans-serif;
 }
 
-.form-container  .button-container {
+.container  .button-container {
   font-family: "Zen Dots", sans-serif;
 }
 
-.form-container  .button-container .send-button {
+.container  .button-container .send-button {
   flex-basis: 75%;
   width: 100%;
   max-width: 700px;
@@ -148,20 +148,20 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-.form-container  .button-container .send-button:hover {
+.container  .button-container .send-button:hover {
   background: transparent;
   border: 1px solid #2E4F7A;
   color: #2E4F7A;
   font-family: "Zen Dots", sans-serif;
 }
 
-.form-container  .button-container .reset-button-container {
+.container  .button-container .reset-button-container {
   filter: drop-shadow(1px 1px 0px #2E4F7A);
   flex-basis: 30%;
   font-family: "Zen Dots", sans-serif;
 }
 
-.form-container .button-container .reset-button-container .reset-button {
+.container .button-container .reset-button-container .reset-button {
   position: relative;
   text-align: center;
   padding: 10px;
@@ -173,7 +173,7 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-.form-container .button-container .reset-button-container .reset-button:hover {
+container .button-container .reset-button-container .reset-button:hover {
   background: #2E4F7A;
   color: #001925;
   font-family: "Zen Dots", sans-serif;
@@ -200,7 +200,7 @@ footer{
     flex-wrap: wrap;
   }
 
-  .form-container {
+  .container {
     max-width: 85%;
     padding: 25px;
   }
@@ -416,6 +416,7 @@ footer{
 </body>
 
 </html>
+
 
 
 
