--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,7 @@
 </head>
 <style>
     body{
-background-image: url("background.png");
-             background-repeat: no-repeat;
+        background-image: url("pic/background.png");
     background-size: cover;
     background-position: center;
 
@@ -90,7 +89,7 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-.container .input {
+.form-container .form .input {
   color: #87a4b6;
   width: 100%;
   background-color: #002733;
@@ -104,11 +103,11 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-.container .input:focus {
+.form-container .form .input:focus {
   border-left: 5px solid #2E4F7A;
 }
 
-.container .textarea {
+.form-container .form .textarea {
   width: 100%;
   padding: 10px;
   border: none;
@@ -124,16 +123,16 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-.container .form .textarea:focus {
+.form-container .form .textarea:focus {
   border-left: 5px solid#2E4F7A;
   font-family: "Zen Dots", sans-serif;
 }
 
-.container  .button-container {
+.form-container .form .button-container {
   font-family: "Zen Dots", sans-serif;
 }
 
-.container  .button-container .send-button {
+.form-container .form .button-container .send-button {
   flex-basis: 75%;
   width: 100%;
   max-width: 700px;
@@ -148,20 +147,20 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-.container  .button-container .send-button:hover {
+.form-container .form .button-container .send-button:hover {
   background: transparent;
   border: 1px solid #2E4F7A;
   color: #2E4F7A;
   font-family: "Zen Dots", sans-serif;
 }
 
-.container  .button-container .reset-button-container {
+.form-container .form .button-container .reset-button-container {
   filter: drop-shadow(1px 1px 0px #2E4F7A);
   flex-basis: 30%;
   font-family: "Zen Dots", sans-serif;
 }
 
-.container .button-container .reset-button-container .reset-button {
+.form-container .form .button-container .reset-button-container .reset-button {
   position: relative;
   text-align: center;
   padding: 10px;
@@ -173,7 +172,7 @@ background-image: url("background.png");
   font-family: "Zen Dots", sans-serif;
 }
 
-container .button-container .reset-button-container .reset-button:hover {
+.form-container .form .button-container .reset-button-container .reset-button:hover {
   background: #2E4F7A;
   color: #001925;
   font-family: "Zen Dots", sans-serif;
@@ -200,7 +199,7 @@ footer{
     flex-wrap: wrap;
   }
 
-  .container {
+  .form-container {
     max-width: 85%;
     padding: 25px;
   }
@@ -414,9 +413,4 @@ footer{
   &copy; 2025 NEXO Group. All rights reserved.
 </footer>
 </body>
-
 </html>
-
-
-
-
