--- a/contact.html
+++ b/contact.html
@@ -392,7 +392,7 @@ footer{
     <!-- From Uiverse.io by Smit-Prajapati --> 
 <br><br><br><br><br><br><br>
 <div class="form-container">
-  <form action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
+  <form class="form" action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
 
     <span class="heading">Get in touch</span>
 
@@ -414,3 +414,4 @@ footer{
 </footer>
 </body>
 </html>
+
