--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         background-image: url("pic/background.png");
     background-size: cover;
     background-position: center;
-
+    height: 100%;
     min-height: 100vh;
     }
     h1{
@@ -414,4 +414,5 @@ footer{
 </footer>
 </body>
 </html>
+
 
