--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
   margin: 30px;
   display: block;
   margin: 0 auto;
-  background-color: #001925;
+  background-color: rgba(0,25,37,0.8);
   padding: 30px;
   border-left: 5px solid #2E4F7A;
   clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), calc(100% - 20px) 100%, 0 100%);
@@ -414,5 +414,6 @@ footer{
 </footer>
 </body>
 </html>
+
 
 
