--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <style>
     body{
-        background-image: url("pic/background.png");
+        background-image: url("background.png");
     background-size: cover;
     background-position: center;
     height: 100%;
@@ -61,7 +61,7 @@
   margin: 30px;
   display: block;
   margin: 0 auto;
-  background-color: rgba(0,25,37,0.8);
+  background-color: #001925;
   padding: 30px;
   border-left: 5px solid #2E4F7A;
   clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), calc(100% - 20px) 100%, 0 100%);
@@ -414,6 +414,7 @@ footer{
 </footer>
 </body>
 </html>
+
 
 
 
