--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <style>
-    body{
-        background-image: url("background.png");
+       body{
+background-image: url("background.png");
+           background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100%;
-    min-height: 100vh;
     }
     h1{
         margin-top: 100px;
@@ -414,6 +413,7 @@ footer{
 </footer>
 </body>
 </html>
+
 
 
 
