--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,10 @@ background-image: url("background.png");
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+           min-height: 1000vh;
+    }
+    body,htnl{
+        height: 100%;
     }
     h1{
         margin-top: 100px;
@@ -413,6 +417,7 @@ footer{
 </footer>
 </body>
 </html>
+
 
 
 
