--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@ background-image: url("background.png");
     background-size: cover;
     background-position: center;
            min-height: 1000vh;
+           margin: 0;
     }
     body,htnl{
         height: 100%;
@@ -417,6 +418,7 @@ footer{
 </footer>
 </body>
 </html>
+
 
 
 
