--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@ background-image: url("background.png");
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-           min-height: 1000vh;
+           min-height: 100vh;
            margin: 0;
     }
-    body,htnl{
+    body,html{
         height: 100%;
     }
     h1{
@@ -418,6 +418,7 @@ footer{
 </footer>
 </body>
 </html>
+
 
 
 
