--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@ background-image: url("background.png");
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-           min-height: 100vh;
            margin: 0;
     }
     body,html{
         height: 100%;
+        margin: 0;
     }
     h1{
         margin-top: 100px;
@@ -418,6 +418,7 @@ footer{
 </footer>
 </body>
 </html>
+
 
 
 
