--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@ background-image: url("background.png");
            margin: 0;
     }
     body,html{
-        height: 100%;
+        min-height: 100%;
         margin: 0;
     }
     h1{
@@ -29,6 +29,7 @@ background-image: url("background.png");
     opacity: 0;
     animation: fadeInUp 0.8s ease-out forwards;
     animation-delay: 0.3s;
+         margin-top:120px;
 }
  @keyframes fadeInUp {
             from {
@@ -73,6 +74,8 @@ background-image: url("background.png");
     animation: fadeInUp 0.8s ease-out forwards;
     animation-delay: 0.7s;
     font-family: "Zen Dots", sans-serif;
+     margin-top:60px;
+   margin-bottom:60px;
 }
  @keyframes fadeInUp {
             from {
@@ -394,7 +397,6 @@ footer{
 </nav>
     <h1>Get in Touch with NEXO</h1>
     <!-- From Uiverse.io by Smit-Prajapati --> 
-<br><br><br><br><br><br><br>
 <div class="form-container">
   <form class="form" action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
 
@@ -418,6 +420,7 @@ footer{
 </footer>
 </body>
 </html>
+
 
 
 
