--- a/careers.html
+++ b/careers.html
@@ -53,6 +53,21 @@ background-image: url("background.png");
  .navlinks a:hover{
     color: #2E4F7A;
  }
+      .navlinks a::after {
+  content: "";
+  position: absolute;
+  left: 50%;            /* porneste din centru */
+  bottom: -4px;         /* distanta fata de text */
+  width: 0;             /* initial invizibil */
+  height: 4px;          /* grosimea liniei */
+  background-color: #2E4F7A;
+   transform: translateX(-50%); /* centrăm linia */
+  transition: width 0.4s ease, left 0.4s ease;
+  transform: translateX(-50%); /* centrăm linia */
+}
+.navlinks a:hover::after {
+  width: 100%; /* linia se intinde complet */
+}
  /* From Uiverse.io by SouravBandyopadhyay */ 
 .notification {
     margin-top: 100px;
@@ -884,6 +899,7 @@ footer{
 </body>
 
 </html>
+
 
 
 
