--- a/updates.html
+++ b/updates.html
@@ -45,6 +45,7 @@ background-image: url("background.png");
  .navlinks a{
        color: white;
    text-decoration: none;
+	 position: relative;
    gap: 30px;
    transition: all 0.4s ease;
  }
@@ -424,5 +425,6 @@ footer{
 </body>
 
 </html>
+
 
 
