--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ background-image: url("background.png");
  .navlinks a{
        color: white;
    text-decoration: none;
+     position: relative;
    gap: 30px;
    transition: all 0.4s ease;
  }
@@ -672,6 +673,7 @@ Coming Soon
 </body>
 
 </html>
+
 
 
 
