--- a/divisions.html
+++ b/divisions.html
@@ -44,6 +44,7 @@ background-image: url("background.png");
  .navlinks a{
        color: white;
    text-decoration: none;
+     position: relative;
    gap: 30px;
    transition: all 0.4s ease;
  }
@@ -321,6 +322,7 @@ It’s made to help passionate creatives learn skills, build experience, and ear
 </body>
 
 </html>
+
 
 
 
