--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,7 @@ background-image: url("background.png");
  .navlinks a{
        color: white;
    text-decoration: none;
+     position: relative;
    gap: 30px;
    transition: all 0.4s ease;
  }
@@ -435,6 +436,7 @@ footer{
 </footer>
 </body>
 </html>
+
 
 
 
