--- a/careers.html
+++ b/careers.html
@@ -47,6 +47,7 @@ background-image: url("background.png");
  .navlinks a{
        color: white;
    text-decoration: none;
+     position: relative;
    gap: 30px;
    transition: all 0.4s ease;
  }
@@ -899,6 +900,7 @@ footer{
 </body>
 
 </html>
+
 
 
 
