--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
  .navlinks a{
        color: white;
    text-decoration: none;
+     position: relative;
    gap: 30px;
    transition: all 0.4s ease;
  }
@@ -566,5 +567,6 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </body>
 
 </html>
+
 
 
