--- a/index.html
+++ b/index.html
@@ -465,10 +465,37 @@ footer{
   color: white;
   margin-top: 10px;
 }
-
+@media (max-width: 768px) {
+  .counter-number {
+    font-size: 2rem;
+  }
+  .counters {
+    gap: 30px;
+  }
+}
+#progress-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 5px;
+  background: linear-gradient(90deg, #2E4F7A, #32a6ff);
+  width: 0%;
+  z-index: 10000;
+  transition: width 0.25s ease-out;
+}
  </style>
 </head>
 <body>
+    <!-- Plasează chiar după <body> -->
+<div id="progress-bar"></div>
+<script>
+window.addEventListener('scroll', () => {
+  const scrollTop = document.documentElement.scrollTop;
+  const scrollHeight = document.documentElement.scrollHeight - window.innerHeight;
+  const scrollPercent = (scrollTop / scrollHeight) * 100;
+  document.getElementById('progress-bar').style.width = scrollPercent + '%';
+});
+</script>
 <nav class="navbar">
   <div class="logo">NEXO</div>
 
