--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <style>
      body{
-       background-image: url("pic/background.png");
+       background-image: url("background.png");
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -679,3 +679,4 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
+
