--- a/careers.html
+++ b/careers.html
@@ -10,7 +10,7 @@
 </head>
 <style>
     body{
-        background-image: url("pic/background.png");
+        background-image: url("background.png");
     background-size: cover;
     background-position: center;
 
@@ -465,3 +465,4 @@ window.addEventListener('scroll', () => {
 </footer>
 </body>
 </html>
+
